src/test/deca/context/invalid/provided/affect-incompatible3.deca
/*/ Description:
//    Affectation et typage
//
// Resultats:
//    Ligne 15: Affectation de types incompatibles.
//
// Historique:
//    cree le 01/01/2022*/
{
   int a;
   float b;

   /* Doit etre refuse.*/

   a = b;
}
